@@ -2,13 +2,14 @@ package ma.ensa.test_stage_projet.services;
 
 import lombok.RequiredArgsConstructor;
 import ma.ensa.test_stage_projet.Dtos.CreateServiceExterieurDTO;
-import ma.ensa.test_stage_projet.Dtos.CreateVilleDTO;
 import ma.ensa.test_stage_projet.Dtos.ResponseServiceExterieurDTO;
 import ma.ensa.test_stage_projet.Dtos.ResponseVilleDTO;
 import ma.ensa.test_stage_projet.entities.ServiceExterieur;
 import ma.ensa.test_stage_projet.entities.Ville;
+import ma.ensa.test_stage_projet.exceptions.AddresseAlreadyADD;
 import ma.ensa.test_stage_projet.exceptions.NotFoundSEException;
 import ma.ensa.test_stage_projet.exceptions.NotFoundVilleException;
+import ma.ensa.test_stage_projet.exceptions.VilleNotInSE;
 import ma.ensa.test_stage_projet.mappers.ServiceExterieurMapper;
 import ma.ensa.test_stage_projet.mappers.VilleMapper;
 import ma.ensa.test_stage_projet.repositories.ServiceExterieurRepository;
@@ -16,39 +17,71 @@ import ma.ensa.test_stage_projet.repositories.VilleRepositiry;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
+
 @Service
 @RequiredArgsConstructor
 public class ServiceExterieurServiceImpl implements ServiceExterieurService {
-    ServiceExterieurRepository serviceExterieurRepository;
-    VilleRepositiry villeRepositiry ;
-    ServiceExterieurMapper serviceExterieurMapper;
-    VilleMapper villeMapper;
-    @Transactional(rollbackFor = {NotFoundVilleException.class, NotFoundSEException.class})
+    private final ServiceExterieurRepository serviceExterieurRepository;
+    private final VilleRepositiry villeRepositiry ;
+    private final ServiceExterieurMapper serviceExterieurMapper;
+    private final VilleMapper villeMapper;
+    @Transactional(rollbackFor = Exception.class)
     @Override
-    public ResponseServiceExterieurDTO saveExterieur(CreateServiceExterieurDTO serviceExterieurDTO, CreateVilleDTO adresseDTO, List<CreateVilleDTO> villes) throws NotFoundSEException, NotFoundVilleException {
-
-        Ville adresse = villeMapper.fromCreate(adresseDTO);
-        ServiceExterieur serviceExterieur= serviceExterieurMapper.fromCreate(serviceExterieurDTO);
-        //villeRepositiry.save(adresse);
-        adresse.setServiceExterieur(serviceExterieur);
-        serviceExterieur.setAdresse(adresse);
-//        adresse.setServiceExterieur(serviceExterieur);
-//        ServiceExterieur savedSE =serviceExterieurRepository.save(serviceExterieur);
-        for (CreateVilleDTO villeDTO : villes) {
-            CreateVilleDTO Villedto = new CreateVilleDTO(
-                    villeDTO.designation(),
-                    villeDTO.code(),
-                    serviceExterieur.getNomSE()
-            );
-            Ville ville = villeMapper.fromCreate(Villedto);
-            serviceExterieur.getVilles().add(ville);
-
-        }
-        ServiceExterieur savedSE=serviceExterieurRepository.save(serviceExterieur);
-        return serviceExterieurMapper.toResponse(savedSE);
+    public Map<String,Object> saveExterieur(CreateServiceExterieurDTO serviceExterieurDTO) {
+        ServiceExterieur serviceExterieur = serviceExterieurMapper.fromCreate( serviceExterieurDTO );
+        ServiceExterieur saved = serviceExterieurRepository.save(serviceExterieur);
+        Map<String,Object> response = new HashMap<>();
+        response.put("id", saved.getIdSE());
+        response.put("nom", saved.getNomSE());
+        response.put("code", saved.getCodeSE());
+        return response;
     }
+    @Transactional(rollbackFor = Exception.class)
+    @Override
+    public Map<String,Object> addAdresse(Long idSE, Long idVille) throws NotFoundSEException , NotFoundVilleException, AddresseAlreadyADD {
+        ServiceExterieur serviceExterieur = serviceExterieurRepository.findById(idSE)
+                .orElseThrow(() -> new NotFoundSEException("Service Exterieur Not Found"));
+        Ville ville = villeRepositiry.findById(idVille).orElseThrow(() -> new NotFoundVilleException("Ville Not Found"));
+        if(serviceExterieur.getAdresse() ==null){
+            serviceExterieur.setAdresseVilleId(idVille);
+            if(serviceExterieur.getVilles() !=null && !serviceExterieur.getVilles().contains(ville)) serviceExterieur.addVille(ville);
+            ville.setEstAdresseSE(true);
+            serviceExterieurRepository.save(serviceExterieur);
+            Map<String,Object> response = new HashMap<>();
+            response.put("service exterieur", serviceExterieurMapper.toResponse(serviceExterieur));
+            response.put("addresse ajoute avec succés", villeMapper.toResponse(ville));
+            return response;
+        }else {
+            throw new AddresseAlreadyADD("addresse deja ajoute");
+        }
+    }
+    @Transactional(rollbackFor = Exception.class)
+    @Override
+    public Map<String,Object> updateAddresse(Long idSE, Long idVille) throws NotFoundSEException , NotFoundVilleException , VilleNotInSE {
+        ServiceExterieur serviceExterieur = serviceExterieurRepository.findById(idSE)
+                .orElseThrow(() -> new NotFoundSEException("Service Exterieur Not Found"));
+        Ville ville = villeRepositiry.findById(idVille).orElseThrow(() -> new NotFoundVilleException("Ville Not Found"));
+        if(serviceExterieur.getVilles()!=null && serviceExterieur.getVilles().contains(ville)){
+            Ville ville1 = serviceExterieur.getAdresse();
+            ville1.setEstAdresseSE(false);
+            serviceExterieur.setAdresseVilleId(idVille);
+            serviceExterieur.addVille(ville);
+            ville.setEstAdresseSE(true);
+            serviceExterieurRepository.save(serviceExterieur);
+            Map<String,Object> response = new HashMap<>();
+            response.put("service exterieur", serviceExterieurMapper.toResponse(serviceExterieur));
+            response.put("nouvelle addresse", villeMapper.toResponse(ville));
+            return response;
+
+        }else {
+            throw new VilleNotInSE("ajouter la ville en premier aux villes attches a cette service exterieur");
+        }
+    }
+
     @Override
     public List<ResponseVilleDTO> getServiceExterieurVilles(String nomSE, int page, int size) throws NotFoundSEException {
         ServiceExterieur serviceExterieur = serviceExterieurRepository.findByNomSE(nomSE);
@@ -58,15 +91,15 @@ public class ServiceExterieurServiceImpl implements ServiceExterieurService {
         return villeDTOs;
     }
     @Override
-    public ResponseVilleDTO getAddresseSE(String nomSE) throws NotFoundVilleException, NotFoundSEException {
+    public ResponseVilleDTO getAddresseSE(String nomSE) throws NotFoundSEException {
         ServiceExterieur serviceExterieur = serviceExterieurRepository.findByNomSE(nomSE);
         if(serviceExterieur == null) throw new NotFoundSEException("Service Exterieur not Found");
         Ville ville = serviceExterieur.getAdresse();
         return villeMapper.toResponse(ville);
     }
-    @Transactional(rollbackFor = {NotFoundSEException.class , NotFoundVilleException.class})
+    @Transactional(rollbackFor = Exception.class)
     @Override
-    public ResponseServiceExterieurDTO updateSE(CreateServiceExterieurDTO dto, Long id) throws NotFoundSEException, NotFoundVilleException {
+    public ResponseServiceExterieurDTO updateSE(CreateServiceExterieurDTO dto, Long id) throws NotFoundSEException {
         serviceExterieurRepository.findById(id)
                 .orElseThrow(() -> new NotFoundSEException("Service Exterieur not found"));
 
@@ -76,34 +109,75 @@ public class ServiceExterieurServiceImpl implements ServiceExterieurService {
     }
 
     @Override
-    public List<ResponseServiceExterieurDTO> getServiceExterieurDTOs() {
-        List<ResponseServiceExterieurDTO> serviceExterieurDTOs;
+    public List<Map<String, Object>> getServiceExterieurDTOs() {
         List<ServiceExterieur> serviceExterieurs = serviceExterieurRepository.findAll();
-        serviceExterieurDTOs = serviceExterieurs.stream().map(serviceExterieurMapper::toResponse).toList();
-        return serviceExterieurDTOs;
+
+        return serviceExterieurs.stream().map((this::getStringObjectMap)).collect(Collectors.toList());
     }
     @Override
-    public ResponseServiceExterieurDTO getServiceExterieurDTO(Long id) throws NotFoundSEException {
+    public Map<String,Object> getServiceExterieurDTO(Long id) throws NotFoundSEException {
         ServiceExterieur serviceExterieur = serviceExterieurRepository.findById(id)
                 .orElseThrow(()-> new NotFoundSEException("service exterieur not found"));
-        return serviceExterieurMapper.toResponse(serviceExterieur);
+        return getStringObjectMap(serviceExterieur);
+    }
+
+    private Map<String, Object> getStringObjectMap(ServiceExterieur serviceExterieur) {
+        Map<String,Object> serviceExterieurDTO = new HashMap<>();
+        List<ResponseVilleDTO> villeDTOS = serviceExterieur.getVilles().stream().map(villeMapper::toResponse).toList();
+        serviceExterieurDTO.put("Service Exterieur",serviceExterieurMapper.toResponse(serviceExterieur));
+        if(serviceExterieur.getAdresse() != null) serviceExterieurDTO.put("addresse",villeMapper.toResponse(serviceExterieur.getAdresse()));
+        serviceExterieurDTO.put("villes attaches",villeDTOS);
+        return serviceExterieurDTO;
     }
 
     @Override
-    public ResponseServiceExterieurDTO getServiceExterieurByName(String nom) throws NotFoundSEException {
+    public Map<String, Object> getServiceExterieurByName(String nom) throws NotFoundSEException {
         ServiceExterieur serviceExterieur = serviceExterieurRepository.findByNomSE(nom);
         if(serviceExterieur == null) throw new NotFoundSEException("service exterieur not found");
-        return serviceExterieurMapper.toResponse(serviceExterieur);
+        return getStringObjectMap(serviceExterieur);
     }
     @Override
-    public ResponseServiceExterieurDTO getServiceExterieurDTOByCode(String code) throws NotFoundSEException {
+    public Map<String, Object> getServiceExterieurDTOByCode(String code) throws NotFoundSEException {
         ServiceExterieur serviceExterieur = serviceExterieurRepository.findByCodeSE(code);
-        return serviceExterieurMapper.toResponse(serviceExterieur);
+        if(serviceExterieur == null) throw new NotFoundSEException("service exterieur not found");
+        return getStringObjectMap(serviceExterieur);
     }
-    @Transactional(rollbackFor = NotFoundSEException.class)
+    @Transactional(rollbackFor = Exception.class)
     @Override
     public void deleteServiceExterieur(Long id) throws NotFoundSEException {
         ServiceExterieur serviceExterieur = serviceExterieurRepository.findById(id).orElseThrow(()->new NotFoundSEException("service exterieur not found"));
         serviceExterieurRepository.delete(serviceExterieur);
     }
+
+    @Transactional(rollbackFor = Exception.class)
+    @Override
+    public ResponseVilleDTO addVilleToSE(Long idSE, Long idVille) throws NotFoundSEException,NotFoundVilleException{
+        Ville ville = villeRepositiry.findById(idVille).orElseThrow(() -> new NotFoundVilleException("Ville not Exist"));
+        ServiceExterieur serviceExterieur = serviceExterieurRepository.findById(idSE)
+                .orElseThrow(() -> new NotFoundSEException("service exterieur not exist"));
+        serviceExterieur.addVille(ville);
+        return villeMapper.toResponse(ville);
+    }
+    @Transactional(rollbackFor = Exception.class)
+    @Override
+    public ResponseVilleDTO deleteVilleFromSE(Long idSE, Long idVille) throws NotFoundSEException,NotFoundVilleException{
+        Ville ville = villeRepositiry.findById(idVille).orElseThrow(() -> new NotFoundVilleException("Ville not Exist"));
+        ServiceExterieur serviceExterieur = serviceExterieurRepository.findById(idSE)
+                .orElseThrow(() -> new NotFoundSEException("service exterieur not exist"));
+        serviceExterieur.removeVille(ville);
+        return villeMapper.toResponse(ville);
+    }
+
+//    @Transactional(rollbackFor = {NotFoundSEException.class, NotFoundVilleException.class})
+//    @Override
+//    public void deleteVilleFromSE(Long idSE, Long idVille) throws NotFoundVilleException, NotFoundSEException {
+//        ServiceExterieur serviceExterieur = serviceExterieurRepository.findById(idSE)
+//                .orElseThrow(()->new NotFoundSEException("service exterieur not found"));
+//        Ville ville = villeRepositiry.findById(idVille).orElseThrow(()->new NotFoundVilleException("ville not found"));
+//
+//        serviceExterieur.getVilles().remove(ville);
+//        ville.setServiceExterieur(null);
+//        serviceExterieurRepository.save(serviceExterieur);
+//        villeRepositiry.save(ville);
+//    }
 }
